// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a FETCH_GAME_DATA_FAILURE action 1`] = `
Object {
  "type": "Fiji/game/FETCH_GAME_DATA_FAILURE",
}
`;

exports[`creates a FETCH_GAME_DATA_REQUEST action 1`] = `
Object {
  "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
}
`;

exports[`creates a FETCH_GAME_DATA_SUCCESS action 1`] = `
Object {
  "gameData": Array [
    Object {
      "a": 1,
      "b": 2,
    },
    Object {
      "c": 3,
      "d": 4,
    },
  ],
  "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
}
`;

exports[`handles FETCH_GAME_DATA_FAILURE action 1`] = `
Object {
  "gameData": Array [],
  "isFetching": false,
}
`;

exports[`handles FETCH_GAME_DATA_REQUEST action 1`] = `
Object {
  "gameData": Array [],
  "isFetching": true,
}
`;

exports[`handles FETCH_GAME_DATA_SUCCESS action 1`] = `
Object {
  "gameData": Array [
    Object {
      "a": 1,
      "b": 2,
    },
    Object {
      "c": 3,
      "d": 4,
    },
  ],
  "isFetching": false,
}
`;

exports[`handles fetchConsecutiveData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "others": Array [
          106,
          51,
          707,
          863,
        ],
        "serial": Array [
          406,
          407,
          408,
          409,
          410,
        ],
      },
      Object {
        "others": Array [
          220,
          207,
          422,
          421,
        ],
        "serial": Array [
          179,
          180,
          181,
          182,
          183,
        ],
      },
      Object {
        "others": Array [
          425,
          946,
          630,
          730,
        ],
        "serial": Array [
          26,
          27,
          28,
          29,
          30,
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchMatchData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Array [
        "x",
        "x",
      ],
      Array [
        "f",
        "f",
      ],
      Array [
        "h",
        "h",
      ],
      Array [
        "t",
        "t",
      ],
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchMultipleChoiceData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "answerIndex": 2,
        "choices": Array [
          "P",
          "R",
          "W",
          "H",
        ],
        "question": "W",
      },
      Object {
        "answerIndex": 3,
        "choices": Array [
          "H",
          "G",
          "T",
          "I",
        ],
        "question": "I",
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchSerialData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "answer": 5,
        "serial": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
        ],
      },
      Object {
        "answer": 973,
        "serial": Array [
          970,
          971,
          972,
          973,
          974,
          975,
          976,
          977,
          978,
        ],
      },
      Object {
        "answer": 924,
        "serial": Array [
          922,
          923,
          924,
          925,
          926,
          927,
          928,
          929,
          930,
        ],
      },
      Object {
        "answer": 575,
        "serial": Array [
          571,
          572,
          573,
          574,
          575,
          576,
          577,
          578,
          579,
          580,
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchWordData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "others": Array [
          "T",
          "Q",
          "K",
          "J",
        ],
        "word": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
      },
      Object {
        "others": Array [
          "K",
          "G",
          "H",
          "T",
        ],
        "word": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
      },
      Object {
        "others": Array [
          "N",
          "M",
          "N",
          "O",
        ],
        "word": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`returns the same state on an unhandled action 1`] = `
Object {
  "gameData": Array [],
  "isFetching": false,
}
`;
